<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Examwarrior</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_web_ceo">WEB ANALYTICS</string>
    <string name="text_web_dev">WEB DEVELOPER</string>
    <string name="text_e_commerce">e-Commerce</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>

    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">SignIn</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="forget_password">Forget password?</string>
    <string name="register">Register</string>
    <string name="already_a_member_signin">Already a member? SignIn</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>

    <!--Fonts name-->
    <string name="font_GothamRnd_Light">GothamRnd_Light.otf</string>
    <string name="font_GothamRndBold">GothamRnd_Bold.otf</string>
    <string name="font_HelveticaNeueLight">HelveticaNeueLight.ttf</string>
    <string name="font_Helveticaneuemedium">helveticaneuemedium.ttf</string>
    <string name="font_GothamRnd_Medium">GothamRnd-Medium.otf</string>
    <string name="font_mavenpro_regular">mavenpro_regular.ttf</string>
    <string name="font_montserrat_bold">Montserrat-Bold.ttf</string>

    <!--Error messages-->
    <string name="network_connectivity_error_message">No network available please try again.</string>
    <string name="network_error_message">Network error please try again.</string>

    <!--Exo messages-->
    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="retry">Tap to retry</string>

    <string name="selection_disabled">Disabled</string>

    <string name="selection_default">Default</string>

    <string name="selection_default_none">Default (none)</string>

    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>

    <string name="enable_random_adaptation">Enable random adaptation</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="content_not_available">Content not available.</string>
    <string name="coursedetail">Course Details</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="role_prompt">Select role</string>
    <string name="user_id">User Id *</string>
    <string name="display_name">Display Name *</string>
    <string name="mobile">Phone Number (We will send OTP to phone number)</string>
    <string name="email">Email ID * (We will send OTP to email address)</string>
    <string-array name="user_role_arrays">
        <item>Student</item>
        <item>Parent</item>
        <item>Teacher</item>
    </string-array>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_demo">DemoActivity</string>
    <string name="change_password">Change password</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_test1">TestActivity1</string>
    <string name="title_activity_question_pager">QuestionPagerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="intro_text_one">Welcome to next level \ne-learning app.</string>
    <string name="intro_text_three">get access of material\nfrom anywhere.</string>
    <string name="password">Password</string>

</resources>
