<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context="app.mobile.examwarrior.ui.fragments.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="@dimen/another_activity_horizontal_margin"
        android:paddingRight="@dimen/another_activity_horizontal_margin"
        android:paddingTop="10dp">


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:background="@drawable/shape_profile"
            android:clickable="false"
            android:focusable="false"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:visibility="visible" />


        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="bottom">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:minHeight="40dp"
                android:padding="10dp"
                android:textColor="@color/accent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="bottom">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/user_id"
                android:inputType="text"
                android:maxLength="15"
                android:maxLines="1"
                android:minHeight="40dp"
                android:padding="10dp"
                android:textColor="@color/accent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="bottom">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/display_name"
                android:inputType="text"
                android:maxLength="15"
                android:maxLines="1"
                android:minHeight="40dp"
                android:padding="10dp"
                android:textColor="@color/accent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="bottom">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/mobile"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:minHeight="40dp"
                android:padding="10dp"
                android:textColor="@color/accent" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="bottom"
            app:passwordToggleEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:minHeight="40dp"
                android:padding="10dp"
                android:textColor="@color/accent" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="bottom"
            app:passwordToggleEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:minHeight="40dp"
                android:padding="10dp"
                android:textColor="@color/accent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/user_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edittext"
            android:clipChildren="false"
            android:entries="@array/user_role_arrays"
            android:minHeight="40dp"
            android:prompt="@string/role_prompt" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="serif"
            android:maxWidth="200dp"
            android:padding="17dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/link_signin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/already_a_member_signin"
            android:textColor="@color/text_selector"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
