<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:animateLayoutChanges="true"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/another_activity_horizontal_margin"
        android:paddingRight="@dimen/another_activity_horizontal_margin"
        tools:context="app.mobile.examwarrior.ui.fragments.ForgetPasswordFragment">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@id/input_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_id"
                android:maxLength="15"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_verify"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="30dp"
            android:fontFamily="serif"
            android:maxWidth="200dp"
            android:padding="17dp"
            android:text="Forget password"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:theme="@style/ThemeOverlay.AppCompat.Dark" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:maxLength="15"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@id/input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:maxLength="15"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_change_password"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="30dp"
            android:fontFamily="serif"
            android:maxWidth="200dp"
            android:padding="17dp"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    </LinearLayout>
</ScrollView>