<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context="app.mobile.examwarrior.ui.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="@dimen/another_activity_horizontal_margin"
        android:paddingRight="@dimen/another_activity_horizontal_margin"
        android:paddingTop="10dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:visibility="invisible"
            app:srcCompat="@mipmap/ic_launcher" />

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="bottom">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_email_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="Username"
                android:inputType="text"
                android:maxLength="15"
                android:maxLines="1"
                android:minHeight="40dp" />
        </android.support.design.widget.TextInputLayout>
        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="bottom">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_password_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:minHeight="40dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="serif"
            android:padding="20dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/link_forget_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/forget_password"
            android:textColor="@color/text_selector"
            android:textSize="16sp" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/no_account_yet_create_one"
            android:textColor="@color/text_selector"
            android:textSize="16sp" />
    </LinearLayout>


</ScrollView>
